--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
     "chai": "^4.1.2",
+    "console-stamp": "^0.2.6",
     "mocha": "^5.0.4",
     "ts-node": "^5.0.1",
     "typescript": "^2.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^5.0.1",
+    "toggl-api": "^1.0.1"
   }
 }
