Start implementing logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,10 @@
             {
                 "match": "\\.*index.ts$",
                 "cmd": "node dist/index.js"
+            },
+            {
+                "match": "\\.*test.ts$",
+                "cmd": "yarn test"
             }
         ]
     }
