Start fixing double output after map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
                 "cmd": "tsc"
             },
             {
-                "match": "src/index.ts$",
-                "cmd": "node dist/index.js"
+                "match": "\\.*index.ts$",
+                "cmd": "yarn start"
             },
             {
                 "match": "\\.*test.ts$",
