Create CLI utility

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "dist/debug.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "execute": "node ./dist/index.js",
-    "build": "tsc",
+    "build": "tsc && npm run shebang && chmod +x ./dist/index.js",
+    "cli": "./dist/index.js",
     "dev": "tsc -w",
+    "shebang": "echo '#! /usr/bin/env node' | cat - ./dist/index.js > temp && mv temp ./dist/index.js",
     "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "repository": "git@github.com:dtgoitia/wwe.git",
